Ajout floatting button : liste de course connexion à la base de donnée (pas testé encore)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,15 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".DayActivity" />
         <activity android:name=".StuffList">
+
+        </activity>
+        <activity android:name=".Modele.ShoppingList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Modele.RecipeList"></activity>
     </application>
 
 </manifest>
