--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,16 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:26.1.0'
+
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+
+    compile 'com.google.firebase:firebase-database:11.4.2'
+    compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.firebaseui:firebase-ui-database:3.1.0'
+
+    implementation 'com.google.firebase:firebase-storage:11.4.2'
+    implementation 'com.google.firebase:firebase-auth:11.4.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
