--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,26 +9,23 @@
         android:roundIcon="@mipmap/logo_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Accueil">
-
-
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>205
+            </intent-filter>
+            205
         </activity>
         <activity
             android:name=".CalendarActivity"
             android:label="@string/title_activity_calendar"
             android:theme="@style/AppTheme" />
         <activity android:name=".DayActivity" />
-        <activity android:name=".StuffList">
-
-        </activity>
-        <activity android:name=".Modele.ShoppingList">
-
-        </activity>
+        <activity android:name=".StuffList" />
+        <activity android:name=".Modele.ShoppingList" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
